<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AgregarVehiculo"
    tools:showIn="@layout/activity_agregar_vehiculo">

    <!--Activity Content-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_license"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txt_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/input_brand"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/txt_costo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/input_cost"
                    android:inputType="numberDecimal" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fecha fabricación:"
                        android:textSize="18dp"/>

                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="showDataPicker"
                        android:hint="Seleccione"
                        android:gravity="right"
                        android:textSize="18dp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.59"
                        android:text="Color:"
                        android:textColor="#ff000000"
                        android:textSize="18sp"/>

                    <RadioGroup
                        android:id="@+id/rg_colores"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.55">

                        <RadioButton
                            android:id="@+id/rd_blanco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="Blanco" />

                        <RadioButton
                            android:id="@+id/rd_negro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:text="Negro" />

                        <RadioButton
                            android:id="@+id/rd_otro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:text="Otro" />

                    </RadioGroup>

                    <EditText
                        android:id="@+id/txt_otro"
                        android:layout_width="109dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:ems="10"
                        android:inputType="textPersonName" />

                </LinearLayout>
                <!--    <EditText
                         android:id="@+id/txt_color"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:hint="@string/input_color"
                         android:inputType="textPersonName" />
     -->

                   <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <Switch
                            android:id="@+id/sw_enrollment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/switch_enrollment"
                            android:textSize="18dp" />
                    </LinearLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:onClick="guardar"
                    android:text="@string/save"
                    android:background="@drawable/my_btn"/>

            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>